--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       font:14px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       -webkit-tap-highlight-color: transparent;
     }
+    :focus-visible{outline:2px solid var(--ok-2); outline-offset:2px}
 
     /* Layout base */
     .wrap{max-width:980px; margin:0 auto; padding:18px}
@@ -32,8 +33,13 @@
       padding:14px 18px;
       border-bottom:1px solid var(--line);
       background:linear-gradient(180deg, rgba(8,12,22,.9), rgba(8,12,22,.6));
-      position:sticky; top:0; z-index:10
+      position:sticky; top:0; z-index:10;
     }
+    /* Safe area (iPhone notch) */
+    @supports (padding-top: env(safe-area-inset-top)){
+      header{ padding-top: calc(14px + env(safe-area-inset-top)); }
+    }
+
     header .logo{
       width:34px; height:34px; border-radius:8px; background:#0f1d30;
       display:grid; place-items:center; font-weight:800; color:var(--ok)
@@ -59,21 +65,32 @@
       border:1px solid var(--line); border-radius:10px;
       font-size:16px; /* evita zoom en iOS */
     }
-
     .btn{
       border:1px solid #2a3d58; background:#132235; color:#dce9ff;
       padding:12px 16px; min-height:44px; border-radius:10px;
-      font-weight:700; cursor:pointer; text-decoration:none; display:inline-block
+      font-weight:700; cursor:pointer; text-decoration:none; display:inline-block;
+      touch-action: manipulation;
     }
     .btn.primary{border-color:#1b3a2a; background:linear-gradient(180deg,#0f3323,#0e2b1d); color:#b9ffd6}
 
     /* Chips / progreso */
-    .chips{display:flex; flex-wrap:wrap; gap:10px; padding:12px 14px}
-    .chip{background:var(--badge); border:1px solid var(--line); padding:8px 12px; border-radius:999px; color:var(--muted)}
+    .chips{
+      display:flex; flex-wrap:wrap; gap:10px; padding:12px 14px;
+    }
+    /* En pantallas muy angostas: scroll horizontal suave */
+    @media (max-width:560px){
+      .chips{overflow-x:auto; flex-wrap:nowrap; -webkit-overflow-scrolling:touch; gap:8px; padding-bottom:8px}
+      .chips::-webkit-scrollbar{height:6px}
+      .chips::-webkit-scrollbar-thumb{background:#1d2b40; border-radius:4px}
+    }
+    .chip{background:var(--badge); border:1px solid var(--line); padding:8px 12px; border-radius:999px; color:var(--muted); white-space:nowrap}
     .progress{padding:14px}
     .bar{height:12px; background:#0b1626; border:1px solid var(--line); border-radius:999px; overflow:hidden}
     .fill{display:block; height:100%; width:0%; background:linear-gradient(90deg,var(--ok),var(--ok-2)); animation:load 24s linear forwards}
     @keyframes load{from{width:0%} to{width:100%}}
+    @media (prefers-reduced-motion: reduce){
+      .fill{animation-duration:1ms}
+    }
     .meta{display:flex; justify-content:space-between; color:var(--muted); padding-top:8px}
 
     /* Listas */
@@ -85,7 +102,7 @@
     .row:last-child{border-bottom:none}
     .ico{width:28px; height:28px; border-radius:8px; background:#0e1b2b; display:grid; place-items:center; font-weight:700; color:var(--ok)}
     .k{color:var(--muted)}
-    .v{font-weight:600}
+    .v{font-weight:600; word-break:break-word}
     .pill{display:inline-block; padding:6px 10px; border-radius:999px; background:#0f2a1e; border:1px solid #1e4b34; color:#b0ffd1; font-weight:700; font-size:12px}
 
     footer{color:var(--muted); padding:18px; text-align:center}
@@ -94,9 +111,10 @@
     @media (max-width: 768px){
       .wrap{padding:14px}
       header{padding:12px 14px; gap:8px}
-      .chips{padding:10px 12px; gap:8px}
+      .chips{padding:10px 12px}
       .chip{font-size:13px}
       .fields{grid-template-columns:1fr} /* inputs en una columna */
+      .actions .btn{width:100%}
     }
 
     /* Reflujo de filas: icono a la izquierda, k arriba y v debajo */
@@ -130,8 +148,8 @@
   <header>
     <div class="logo">W</div>
     <div>
-      <h1>WA — Panel de simulación</h1>
-      <small>Solo para fines fotográficos. No realiza acciones reales.</small>
+      <h1>WHATSAPP HACK V3 1.1.0 — Panel</h1>
+      <small>Server: Investigador Privado.</small>
     </div>
   </header>
 
@@ -155,20 +173,20 @@
             <input id="num" type="tel" placeholder="Ej: 93991238526" />
           </div>
         </div>
-        <div style="margin-top:16px">
+        <div class="actions" style="margin-top:16px">
           <label for="go" class="btn primary">Continuar</label>
         </div>
       </div>
     </section>
 
     <section class="panel step step-2">
-      <h2 class="ph">Búsqueda de dispositivos — Simulación</h2>
+      <h2 class="ph">PANEL DE CONTROL</h2>
       <div class="chips">
-        <span class="chip">Hoy: 02 de septiembre de 2025</span>
+        <span class="chip">Hoy: <span id="todayDate"></span></span>
         <span class="chip">Identificación: eb93f4df0358740685706d448c7d518d</span>
       </div>
       <div class="progress">
-        <div style="color:var(--muted); margin-bottom:8px">Subir datos extraídos a su Panel de Control % MARCA</div>
+        <div style="color:var(--muted); margin-bottom:8px">Espere mientras se carga la barra.</div>
         <div class="bar"><span class="fill"></span></div>
         <div class="meta"><span>0%</span><span>100%</span></div>
         <div style="color:var(--muted); margin-top:8px">Descargando 2 servidores · 44.34 MB/s · 1009.12 MB / <span id="totalGb2">1.13 GB</span></div>
@@ -236,7 +254,7 @@
         </div>
       </section>
 
-      <div class="wrap" style="padding:16px">
+      <div class="actions" style="padding:16px">
         <label for="go" class="btn">Volver</label>
       </div>
     </section>
@@ -248,12 +266,38 @@
 
   <script>
     (function(){
-      var min=1.10,max=1.82;
+      // === Peso total aleatorio ===
+      var min=1.10, max=1.82;
       var total=(Math.random()*(max-min)+min).toFixed(2)+' GB';
       var a=document.getElementById('totalGb');
       var b=document.getElementById('totalGb2');
       if(a) a.textContent='~ '+total;
       if(b) b.textContent=total;
+
+      // === Fecha local forzada a America/Guayaquil ===
+      var tz='America/Guayaquil';
+      var target=document.getElementById('todayDate');
+      if(target){
+        try{
+          var now=new Date();
+          var fechaEC=new Intl.DateTimeFormat('es-EC',{
+            timeZone:tz,
+            day:'2-digit',
+            month:'long',
+            year:'numeric'
+          }).format(now); // ej: "02 de septiembre de 2025"
+          target.textContent=fechaEC;
+        }catch(e){
+          // Fallback sin Intl (UTC-5 fijo; Ecuador sin DST)
+          var utc=new Date(Date.now()+(new Date()).getTimezoneOffset()*60000);
+          var local=new Date(utc.getTime()-5*60*60000);
+          var meses=['enero','febrero','marzo','abril','mayo','junio','julio','agosto','septiembre','octubre','noviembre','diciembre'];
+          var dd=String(local.getDate()).padStart(2,'0');
+          var mm=meses[local.getMonth()];
+          var yy=local.getFullYear();
+          target.textContent=dd+' de '+mm+' de '+yy;
+        }
+      }
     })();
   </script>
 </body>
