--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       background:linear-gradient(180deg, rgba(8,12,22,.9), rgba(8,12,22,.6));
       position:sticky; top:0; z-index:10;
     }
-    /* Safe area (iPhone notch) */
     @supports (padding-top: env(safe-area-inset-top)){
       header{ padding-top: calc(14px + env(safe-area-inset-top)); }
     }
@@ -77,7 +76,6 @@
     .chips{
       display:flex; flex-wrap:wrap; gap:10px; padding:12px 14px;
     }
-    /* En pantallas muy angostas: scroll horizontal suave */
     @media (max-width:560px){
       .chips{overflow-x:auto; flex-wrap:nowrap; -webkit-overflow-scrolling:touch; gap:8px; padding-bottom:8px}
       .chips::-webkit-scrollbar{height:6px}
@@ -116,8 +114,6 @@
       .fields{grid-template-columns:1fr} /* inputs en una columna */
       .actions .btn{width:100%}
     }
-
-    /* Reflujo de filas: icono a la izquierda, k arriba y v debajo */
     @media (max-width: 640px){
       .row{
         grid-template-columns:28px 1fr;
@@ -134,8 +130,6 @@
       .panel{margin-top:14px}
       .meta{font-size:13px}
     }
-
-    /* Pequeños (<=380px): compactar más */
     @media (max-width: 380px){
       .wrap{padding:12px}
       .chip{padding:6px 10px}
@@ -183,7 +177,7 @@
       <h2 class="ph">PANEL DE CONTROL</h2>
       <div class="chips">
         <span class="chip">Hoy: <span id="todayDate"></span></span>
-        <span class="chip">Identificación: eb93f4df0358740685706d448c7d518d</span>
+        <span class="chip">Finalizado: <span id="endTime"></span></span>
       </div>
       <div class="progress">
         <div style="color:var(--muted); margin-bottom:8px">Espere mientras se carga la barra.</div>
@@ -274,29 +268,38 @@
       if(a) a.textContent='~ '+total;
       if(b) b.textContent=total;
 
-      // === Fecha local forzada a America/Guayaquil ===
+      // === Fecha local (día) y hora de finalización en America/Guayaquil ===
       var tz='America/Guayaquil';
-      var target=document.getElementById('todayDate');
-      if(target){
-        try{
-          var now=new Date();
+      var todayEl=document.getElementById('todayDate');
+      var endEl=document.getElementById('endTime');
+      try{
+        var now=new Date();
+        // Día
+        if(todayEl){
           var fechaEC=new Intl.DateTimeFormat('es-EC',{
-            timeZone:tz,
-            day:'2-digit',
-            month:'long',
-            year:'numeric'
-          }).format(now); // ej: "02 de septiembre de 2025"
-          target.textContent=fechaEC;
-        }catch(e){
-          // Fallback sin Intl (UTC-5 fijo; Ecuador sin DST)
-          var utc=new Date(Date.now()+(new Date()).getTimezoneOffset()*60000);
-          var local=new Date(utc.getTime()-5*60*60000);
-          var meses=['enero','febrero','marzo','abril','mayo','junio','julio','agosto','septiembre','octubre','noviembre','diciembre'];
-          var dd=String(local.getDate()).padStart(2,'0');
-          var mm=meses[local.getMonth()];
-          var yy=local.getFullYear();
-          target.textContent=dd+' de '+mm+' de '+yy;
+            timeZone:tz, day:'2-digit', month:'long', year:'numeric'
+          }).format(now);
+          todayEl.textContent=fechaEC;
         }
+        // Hora (HH:mm)
+        if(endEl){
+          var horaEC=new Intl.DateTimeFormat('es-EC',{
+            timeZone:tz, hour:'2-digit', minute:'2-digit', hour12:false
+          }).format(now);
+          endEl.textContent=horaEC;
+        }
+      }catch(e){
+        // Fallback sin Intl (UTC-5 fijo; Ecuador sin DST)
+        var utc=new Date(Date.now()+(new Date()).getTimezoneOffset()*60000);
+        var local=new Date(utc.getTime()-5*60*60000);
+        var meses=['enero','febrero','marzo','abril','mayo','junio','julio','agosto','septiembre','octubre','noviembre','diciembre'];
+        var dd=String(local.getDate()).padStart(2,'0');
+        var mm=meses[local.getMonth()];
+        var yy=local.getFullYear();
+        if(todayEl) todayEl.textContent=dd+' de '+mm+' de '+yy;
+        var HH=String(local.getHours()).padStart(2,'0');
+        var MM=String(local.getMinutes()).padStart(2,'0');
+        if(endEl) endEl.textContent=HH+':'+MM;
       }
     })();
   </script>
