--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     <section class="panel step step-2">
       <h2 class="ph">PANEL DE CONTROL</h2>
       <div class="chips">
-        <span class="chip">Hoy: <span id="todayDate"></span></span>
-        <span class="chip">Finalizado: <span id="endTime"></span></span>
+        <span class="chip">Fecha: <span id="todayDate"></span></span>
+        <span class="chip">Hora: <span id="endTime"></span></span>
       </div>
       <div class="progress">
         <div style="color:var(--muted); margin-bottom:8px">Espere mientras se carga la barra.</div>
