--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div>
             <label for="num">Número</label>
-            <input id="num" type="tel" placeholder="Ej: 93991238526" />
+            <input id="num" type="tel" placeholder="Ej: 991238526" />
           </div>
         </div>
         <div class="actions" style="margin-top:16px">
@@ -192,7 +192,7 @@
           <div class="row">
             <div class="ico">WA</div>
             <div class="k">Número</div>
-            <div class="v">+593 93991238526</div>
+            <div class="v">+593 99 123 8526</div>
           </div>
           <div class="row">
             <div class="ico">🌍</div>
