--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <span class="chip">Hora: <span id="endTime"></span></span>
       </div>
       <div class="progress">
-        <div style="color:var(--muted); margin-bottom:8px">Espere mientras se carga la barra.</div>
+        <div style="color:var(--muted); margin-bottom:8px">Proceso finalizado con éxito.</div>
         <div class="bar"><span class="fill"></span></div>
         <div class="meta"><span>0%</span><span>100%</span></div>
         <div style="color:var(--muted); margin-top:8px">Descargando 2 servidores · 44.34 MB/s · 1009.12 MB / <span id="totalGb2">1.13 GB</span></div>
