--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     }
     :focus-visible{outline:2px solid var(--ok-2); outline-offset:2px}
 
-    /* Layout base */
     .wrap{max-width:980px; margin:0 auto; padding:18px}
     header{
       display:flex; align-items:center; gap:10px;
@@ -38,7 +37,6 @@
     @supports (padding-top: env(safe-area-inset-top)){
       header{ padding-top: calc(14px + env(safe-area-inset-top)); }
     }
-
     header .logo{
       width:34px; height:34px; border-radius:8px; background:#0f1d30;
       display:grid; place-items:center; font-weight:800; color:var(--ok)
@@ -48,7 +46,7 @@
     .panel{background:var(--panel); border:1px solid var(--line); border-radius:var(--radius); overflow:hidden; margin-top:18px}
     .panel > .ph{margin:0; padding:14px 16px; background:var(--panel-2); border-bottom:1px solid var(--line); font-size:15px}
 
-    /* Flujo en 2 pasos (sin JS extra) */
+    /* Flujo en 2 pasos */
     #go{position:absolute; left:-9999px}
     .step{display:none}
     .step.step-1{display:block}
@@ -62,7 +60,7 @@
       width:100%; padding:12px 12px; min-height:44px;
       background:#0f1c2c; color:var(--text);
       border:1px solid var(--line); border-radius:10px;
-      font-size:16px; /* evita zoom en iOS */
+      font-size:16px;
     }
     .btn{
       border:1px solid #2a3d58; background:#132235; color:#dce9ff;
@@ -73,9 +71,7 @@
     .btn.primary{border-color:#1b3a2a; background:linear-gradient(180deg,#0f3323,#0e2b1d); color:#b9ffd6}
 
     /* Chips / progreso */
-    .chips{
-      display:flex; flex-wrap:wrap; gap:10px; padding:12px 14px;
-    }
+    .chips{display:flex; flex-wrap:wrap; gap:10px; padding:12px 14px}
     @media (max-width:560px){
       .chips{overflow-x:auto; flex-wrap:nowrap; -webkit-overflow-scrolling:touch; gap:8px; padding-bottom:8px}
       .chips::-webkit-scrollbar{height:6px}
@@ -84,19 +80,13 @@
     .chip{background:var(--badge); border:1px solid var(--line); padding:8px 12px; border-radius:999px; color:var(--muted); white-space:nowrap}
     .progress{padding:14px}
     .bar{height:12px; background:#0b1626; border:1px solid var(--line); border-radius:999px; overflow:hidden}
-    /* <<< Cambio aquí: barra llena desde el inicio >>> */
     .fill{
       display:block; height:100%; width:100%;
       background:linear-gradient(90deg,var(--ok),var(--ok-2));
-      animation:none;
-    }
-    @keyframes load{from{width:0%} to{width:100%}}
-    @media (prefers-reduced-motion: reduce){
-      .fill{animation-duration:1ms}
+      animation:none; /* llena desde el inicio */
     }
     .meta{display:flex; justify-content:space-between; color:var(--muted); padding-top:8px}
 
-    /* Listas */
     .list{padding:10px 14px 16px}
     .row{
       display:grid; grid-template-columns:28px 230px 1fr;
@@ -110,13 +100,13 @@
 
     footer{color:var(--muted); padding:18px; text-align:center}
 
-    /* ======= OPTIMIZACIONES MÓVIL ======= */
+    /* Móvil */
     @media (max-width: 768px){
       .wrap{padding:14px}
       header{padding:12px 14px; gap:8px}
       .chips{padding:10px 12px}
       .chip{font-size:13px}
-      .fields{grid-template-columns:1fr} /* inputs en una columna */
+      .fields{grid-template-columns:1fr}
       .actions .btn{width:100%}
     }
     @media (max-width: 640px){
@@ -197,7 +187,7 @@
           <div class="row">
             <div class="ico">WA</div>
             <div class="k">Número</div>
-            <div class="v">+593 99 123 8526</div>
+            <div class="v" id="outNum">—</div>
           </div>
           <div class="row">
             <div class="ico">🌍</div>
@@ -277,32 +267,71 @@
       var tz='America/Guayaquil';
       var todayEl=document.getElementById('todayDate');
       var endEl=document.getElementById('endTime');
-      try{
-        var now=new Date();
-        if(todayEl){
-          var fechaEC=new Intl.DateTimeFormat('es-EC',{
-            timeZone:tz, day:'2-digit', month:'long', year:'numeric'
-          }).format(now);
-          todayEl.textContent=fechaEC;
+
+      function updateDateTimeNow(){
+        try{
+          var now=new Date();
+          if(todayEl){
+            var fechaEC=new Intl.DateTimeFormat('es-EC',{
+              timeZone:tz, day:'2-digit', month:'long', year:'numeric'
+            }).format(now);
+            todayEl.textContent=fechaEC;
+          }
+          if(endEl){
+            var horaEC=new Intl.DateTimeFormat('es-EC',{
+              timeZone:tz, hour:'2-digit', minute:'2-digit', hour12:false
+            }).format(now);
+            endEl.textContent=horaEC;
+          }
+        }catch(e){
+          var utc=new Date(Date.now()+(new Date()).getTimezoneOffset()*60000);
+          var local=new Date(utc.getTime()-5*60*60000);
+          var meses=['enero','febrero','marzo','abril','mayo','junio','julio','agosto','septiembre','octubre','noviembre','diciembre'];
+          var dd=String(local.getDate()).padStart(2,'0');
+          var mm=meses[local.getMonth()];
+          var yy=local.getFullYear();
+          if(todayEl) todayEl.textContent=dd+' de '+mm+' de '+yy;
+          var HH=String(local.getHours()).padStart(2,'0');
+          var MM=String(local.getMinutes()).padStart(2,'0');
+          if(endEl) endEl.textContent=HH+':'+MM;
         }
-        if(endEl){
-          var horaEC=new Intl.DateTimeFormat('es-EC',{
-            timeZone:tz, hour:'2-digit', minute:'2-digit', hour12:false
-          }).format(now);
-          endEl.textContent=horaEC;
-        }
-      }catch(e){
-        // Fallback sin Intl (UTC-5 fijo; Ecuador sin DST)
-        var utc=new Date(Date.now()+(new Date()).getTimezoneOffset()*60000);
-        var local=new Date(utc.getTime()-5*60*60000);
-        var meses=['enero','febrero','marzo','abril','mayo','junio','julio','agosto','septiembre','octubre','noviembre','diciembre'];
-        var dd=String(local.getDate()).padStart(2,'0');
-        var mm=meses[local.getMonth()];
-        var yy=local.getFullYear();
-        if(todayEl) todayEl.textContent=dd+' de '+mm+' de '+yy;
-        var HH=String(local.getHours()).padStart(2,'0');
-        var MM=String(local.getMinutes()).padStart(2,'0');
-        if(endEl) endEl.textContent=HH+':'+MM;
+      }
+
+      // Mostrar una fecha/hora inicial
+      updateDateTimeNow();
+
+      // === Copiar número ingresado al panel ===
+      var go=document.getElementById('go');
+      var cc=document.getElementById('cc');
+      var num=document.getElementById('num');
+      var out=document.getElementById('outNum');
+
+      function formatLocal(d){
+        d=(d||'').replace(/\D/g,''); // solo dígitos
+        if(d.length===9)  return d.slice(0,2)+' '+d.slice(2,5)+' '+d.slice(5);
+        if(d.length===10) return d.slice(0,3)+' '+d.slice(3,6)+' '+d.slice(6);
+        // genérico: grupos de 3
+        return d.replace(/(.{3})/g,'$1 ').trim();
+      }
+
+      function updateNumber(){
+        var code=(cc && cc.value) ? ('+'+cc.value) : '';
+        var local=formatLocal(num && num.value ? num.value.trim() : '');
+        var txt='—';
+        if(code && local) txt=code+' '+local;
+        else if(local)    txt=local;
+        else if(code)     txt=code;
+        if(out) out.textContent=txt;
+      }
+
+      // Cuando se cambia al paso 2 (Continuar), copiamos y refrescamos la hora
+      if(go){
+        go.addEventListener('change', function(){
+          if(go.checked){
+            updateNumber();
+            updateDateTimeNow();
+          }
+        });
       }
     })();
   </script>
